--- a/serverless_deploy_examples/requirements.txt
+++ b/serverless_deploy_examples/requirements.txt
@@ -7,3 +7,10 @@ numpy==1.19.5
 matplotlib==3.2.2
 pandas==1.1.5
 Pillow==5.4.1
+requests==2.23.0
+scikit-image==0.16.2
+scipy==1.4.1
+Cython==0.29.24
+imgaug==0.2.9
+ipython==5.5.0
+google-cloud-storage==1.18.1
